--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -33,6 +33,7 @@
 	<link rel="stylesheet" href="{% static 'css/icomoon.css' %}">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 	<link rel="stylesheet" href="{% static 'css/404style.css' %}">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
        
@@ -63,7 +64,7 @@
 							<a class="dropdown-item" href="{% url 'shop' %}">Sản Phẩm</a>
 							<a class="dropdown-item" href="{% url 'wishlist' %}">Danh sách yêu thích</a>
 							<a class="dropdown-item" href="{% url 'cart' %}">Giỏ hàng</a>
-							<a class="dropdown-item" href="{% url 'checkout' %}">Thanh toán</a>
+							<a class="dropdown-item" href="{% url 'checkout:deliverychoices' %}">Thanh toán</a>
 						</div>
 					</li>
 					<li class="nav-item {% block menu_about_class %}{% endblock %}"><a href="{% url 'about' %}"
