--- a/DiChoHo/templates/checkout/payment_selection.html
+++ b/DiChoHo/templates/checkout/payment_selection.html
@@ -15,25 +15,30 @@
 
 <div class="container">
     <div class="row g-3">
-        <div class="col-md-4 col-lg-4 order-md-last p-0 order-3">
-            <div class="d-flex bd-highlight ms-0">
-                <div class="p-2 flex-grow-1 bd-highlight">Sub Total:</div>
-                <div class="p-2 bd-highlight"><span class="fw-bold h5">£</span><span id="sub_total"
-                        class="fw-bold h5">{{cart.get_subtotal_price}}</span></div>
-            </div>
-            <div class="d-flex bd-highlight">
-                <div class="p-2 flex-grow-1 bd-highlight">Delivery Cost:</div>
-                <div class="p-2 bd-highlight"><span class="fw-bold h5">£</span><span id="delivery_price"
-                        class="fw-bold h5">{{cart.get_delivery_price}}</span></div>
-            </div>
-            <div class="d-flex bd-highlight">
-                <div class="p-2 flex-grow-1 bd-highlight">Total:</div>
-                <div class="p-2 bd-highlight"><span class="fw-bold h5">£</span><span id="total"
-                        class="fw-bold h5">{{cart.get_total_price}}</span></div>
-            </div>
-        </div>
-        <div class="col-md-7 col-lg-8 pe-0 pe-md-5">
+        <div class="col-md-7 col-lg-8 order-md-last p-0 order-3">
             <div id="paypal-button-container"></div>
+        </div>
+        <div class="col-md-4 col-lg-4 pe-0 pe-md-5">
+            <div class="cart-detail cart-total p-3 p-md-4">
+                <h3 class="billing-heading mb-4">Cart Total</h3>
+
+                <p class="d-flex">
+                    <span>Subtotal</span>
+                    <span id="sub_total">{{cart.get_subtotal_price}}</span>
+                    <span class="fw-bold">VND</span>
+                </p>
+                <p class="d-flex">
+                    <span>Delivery</span>
+                    <span id="delivery_price">{{cart.get_delivery_price}}</span>
+                    <span class="fw-bold">VND</span>
+                </p>
+                <hr>
+                <p class="d-flex total-price">
+                    <span>Total</span>
+                    <span id="total">{{cart.get_total_price}}</span>
+                    <span class="fw-bold">VND</span>
+                </p>
+            </div>
         </div>
     </div>
 </div>
