--- a/DiChoHo/templates/cart.html
+++ b/DiChoHo/templates/cart.html
@@ -107,12 +107,15 @@
           <h3>Tính tiền</h3>
           <hr />
           <p class="d-flex total-price">
-            <span>Tổng số tiền</span>
-            <span id="totalPrice" style="text-transform: lowercase;">{{cart.get_total_price}}đ</span>
+            <span>Tổng số tiền sản phẩm</span>
+            <span id="totalPrice" style="text-transform: lowercase;">{{cart.get_subtotal_price}}đ</span>
           </p>
+          {% for message in messages %}
+          <div class="msg">{{message}}</div>
+          {% endfor %}
         </div>
         <p class="row justify-content-center">
-          <a role="button" href="{% url 'checkout:deliverychoices' %}" class="btn btn-primary py-3 px-4">Thanh toán</a>
+          <a role="button" href="{% url 'checkout:delivery' %}" class="btn btn-primary py-3 px-4">Thanh toán</a>
         </p>
       </div>
     </div>
