--- a/DiChoHo/templates/checkout/payment_successful.html
+++ b/DiChoHo/templates/checkout/payment_successful.html
@@ -12,7 +12,7 @@
   </div>
   <hr />
   <div class="col-12">
-    {% comment %} <p>View all <a href="{% url 'user_orders'%}">orders</a></p> {% endcomment %}
+    <p>View all <a href="{% url 'user_orders'%}">orders</a></p>
   </div>
 </div>
 
