--- a/DiChoHo/templates/base.html
+++ b/DiChoHo/templates/base.html
@@ -64,7 +64,7 @@
 							<a class="dropdown-item" href="{% url 'shop' %}">Sản Phẩm</a>
 							<a class="dropdown-item" href="{% url 'wishlist' %}">Danh sách yêu thích</a>
 							<a class="dropdown-item" href="{% url 'cart' %}">Giỏ hàng</a>
-							<a class="dropdown-item" href="{% url 'checkout:deliverychoices' %}">Thanh toán</a>
+							<a class="dropdown-item" href="{% url 'checkout:delivery' %}">Thanh toán</a>
 						</div>
 					</li>
 					<li class="nav-item {% block menu_about_class %}{% endblock %}"><a href="{% url 'about' %}"
