--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -61,52 +61,53 @@
               </svg></a>
           </li>
           <li class="nav-item">
-            <a href="#information_order" data-toggle="tab" class="nav-link has-icon"><svg xmlns="http://www.w3.org/2000/svg"
-              width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round" class="feather feather-credit-card">
-              <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
-              <line x1="1" y1="10" x2="23" y2="10"></line>
-            </svg></a>
+            <a href="#information_order" data-toggle="tab" class="nav-link has-icon"><svg
+                xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="feather feather-credit-card">
+                <rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect>
+                <line x1="1" y1="10" x2="23" y2="10"></line>
+              </svg></a>
           </li>
         </ul>
       </div>
       <div class="card-body tab-content">
         <div class="tab-pane active" id="profile">
-            <div class="form-group" style="font-size:25px">Thông tin người dùng </div>
-            <hr>
-            <div class="info">
-              <div class="info-left" style="float: left;width: 60%;">
-                <div class="info-title">Thông tin cá nhân</div>
-                <div class="informational">
-                      <div class="form-name" style="display:flex;padding-top:30px">
-                        <div class="input-label">Họ & tên</div>
-                        <div class= " " style="z-index:1 ;flex : 1 1 0%; padding-left:80px;box-sizing: border-box;">
-                           <p>{{user.first_name}}</p> 
-                        </div>
-                      </div>
+          <div class="form-group" style="font-size:25px">Thông tin người dùng </div>
+          <hr>
+          <div class="info">
+            <div class="info-left" style="float: left;width: 60%;">
+              <div class="info-title">Thông tin cá nhân</div>
+              <div class="informational">
+                <div class="form-name" style="display:flex;padding-top:30px">
+                  <div class="input-label">Họ & tên</div>
+                  <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:80px;box-sizing: border-box;">
+                    <p>{{user.first_name}}</p>
+                  </div>
+                </div>
 
-                      <div class="form-email" style="display:flex;padding-top:30px">
-                        <div class="input-label">Email</div>
-                        <div class= " " style="z-index:1 ;flex : 1 1 0%; padding-left:102px;box-sizing: border-box;">
-                         <p>{{user.email}}</p>
-                        </div>
-                      </div>
+                <div class="form-email" style="display:flex;padding-top:30px">
+                  <div class="input-label">Email</div>
+                  <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:102px;box-sizing: border-box;">
+                    <p>{{user.email}}</p>
+                  </div>
+                </div>
 
-                      <div class="form-location" style="display:flex;padding-top:30px">
-                        <div class="input-label">Địa chỉ</div>
-                        <div class= " " style="z-index:1 ;flex : 1 1 0%; padding-left:92px;box-sizing: border-box;">
-                           <p>{{user_address.adress_line}}</p> 
-                        </div>
-                      </div>
+                <div class="form-location" style="display:flex;padding-top:30px">
+                  <div class="input-label">Địa chỉ</div>
+                  <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:92px;box-sizing: border-box;">
+                    <p>{{user_address.adress_line}}</p>
+                  </div>
+                </div>
 
-                      <div class="form-phone" style="display:flex;padding-top:30px">
-                        <div class="input-label">Số điện thoại</div>
-                        <div class= " " style="z-index:1 ;flex : 1 1 0%; padding-left:50px;box-sizing: border-box;">
-                          <p>{{user_address.phone}}</p>
-                        </div>
-                      </div>
+                <div class="form-phone" style="display:flex;padding-top:30px">
+                  <div class="input-label">Số điện thoại</div>
+                  <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:50px;box-sizing: border-box;">
+                    <p>{{user_address.phone}}</p>
+                  </div>
+                </div>
 
-                      <!-- <div class="form-birth" style="display:flex;padding-top:30px">
+                <!-- <div class="form-birth" style="display:flex;padding-top:30px">
                         <div class="input-label">Ngày sinh</div>
                         <div class= " " style="z-index:1 ;flex : 1 1 0%; padding-left:68px;box-sizing: border-box;">
                           <div class="select_div" style="padding-right: 60px;">
@@ -169,7 +170,7 @@
                         </div>
                       </div> -->
 
-                      <!-- <div class="form-sex" style="display:flex;padding-top:30px">
+                <!-- <div class="form-sex" style="display:flex;padding-top:30px">
                         <div class="input-label">Giới tính</div>
                         <div class= " " style="z-index:1 ;flex : 1 1 0%; padding-left:80px;box-sizing: border-box;">
                           <input class="input" type ="radio" style="height: 15px;width: 15px;" name="gender" value="male">
@@ -183,83 +184,141 @@
                         </div>
                       </div> -->
 
-                      <div class="form-phone" style="display:flex;padding-top:30px">
-                        <div class= " " style="z-index:1 ;flex : 1 1 0%;position : relative;padding-left: 180px;box-sizing: border-box;">
-                          <button type="submit" class="btn-solve" style="color:white;background-color:#02BE6E;padding: 10px 40px 7px 40px;box-sizing: border-box;">Lưu thông tin</button>
-                        </div>
-                      </div>                      
-                      
-                </div>
-              </div>
-              <div class="blockquote" style="border-left:1px solid rgb(235, 235, 240);margin:16px 0px;;"></div>
-              <div class="info-right" style="float:right;width: 40%;">
-                <div class="image_right">
-                  <div class="image_right_bottom">
-                    <div class="choose_group">
-                      <div class="choose_file" style="background-image: url();"></div>
-                    </div><input class="image_file" type="file" accept=".jpg,.jpeg,.png"><button type="button" class="btn btn-light btn--m btn--inline">Chọn ảnh</button>
+                <div class="form-phone" style="display:flex;padding-top:30px">
+                  <div class=" "
+                    style="z-index:1 ;flex : 1 1 0%;position : relative;padding-left: 180px;box-sizing: border-box;">
+                    <button type="submit" class="btn-solve"
+                      style="color:white;background-color:#02BE6E;padding: 10px 40px 7px 40px;box-sizing: border-box;">Lưu
+                      thông tin</button>
                   </div>
+                </div>
+
+              </div>
+            </div>
+            <div class="blockquote" style="border-left:1px solid rgb(235, 235, 240);margin:16px 0px;;"></div>
+            <div class="info-right" style="float:right;width: 40%;">
+              <div class="image_right">
+                <div class="image_right_bottom">
+                  <div class="choose_group">
+                    <div class="choose_file" style="background-image: url();"></div>
+                  </div><input class="image_file" type="file" accept=".jpg,.jpeg,.png"><button type="button"
+                    class="btn btn-light btn--m btn--inline">Chọn ảnh</button>
                 </div>
               </div>
             </div>
-          
+          </div>
+
         </div>
-        
-        
-        
+
+
+
         <div class="tab-pane" id="security">
           <div class="form-group" style="font-size:25px">Đổi mật khẩu</div>
           <h6>Để bảo mật tài khoản vui lòng không chia sẻ mật khẩu cho người khác</h6>
           <hr>
           <div class="block_change_password" style="display:block;margin-top:0em;">
-            <form style="padding:16px;border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px;display:block;width: 80%;float:left;">
+
+            <form method="post"
+              style="padding:16px;border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px;display:block;width: 80%;float:left;">
+              {% csrf_token %}
+              {{ form }}
               <div class="form-password-current" style="font-size:20px;padding-top:10px;">Mật khẩu hiện tại</div>
-              <div class="input-password-current" style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
-                <input name="oldPassword" type="password" maxlength="50" placeholder="Nhập mật khẩu hiện tại" value="" style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepass">
+              <div class="input-password-current"
+                style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
+                <input name="oldPassword" type="password" maxlength="50" placeholder="Nhập mật khẩu hiện tại" value=""
+                  style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepass">
                 <input type="checkbox" onclick="Toggle()">
-                    <b style="right:0">Hiện</b>
+                <b style="right:0">Hiện</b>
               </div>
 
               <div class="form-password-new" style="font-size:20px;padding-top:20px">Mật khẩu mới</div>
-              <div class="input-password-new" style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
-                <input name="newPassword" type="password" maxlength="50" placeholder="Nhập mật khẩu mới" value="" style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepassnew">
-                <input type="checkbox" onclick="Toggle1()" >
-                    <b style="right:0">Hiện</b>
+              <div class="input-password-new"
+                style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
+                <input name="newPassword" type="password" maxlength="50" placeholder="Nhập mật khẩu mới" value=""
+                  style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepassnew">
+                <input type="checkbox" onclick="Toggle1()">
+                <b style="right:0">Hiện</b>
               </div>
 
               <div class="form-confirm-password" style="font-size:20px;padding-top:20px">Nhập lại mật khẩu mới</div>
-              <div class="input-confirm-password" style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
-                <input name="retypePassword" type="password" maxlength="50" placeholder="Nhập lại mật khẩu mới" value="" style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepassconfirmnew">
+              <div class="input-confirm-password"
+                style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
+                <input name="retypePassword" type="password" maxlength="50" placeholder="Nhập lại mật khẩu mới" value=""
+                  style="font-size:15px;padding-right:470px;margin:10px 4px" id="typepassconfirmnew">
                 <input type="checkbox" onclick="Toggle2()">
-                    <b style="right:0">Hiện</b>
+                <b style="right:0">Hiện</b>
               </div>
-              <div class="btn_finish" style="padding-top:20px;">  
-              <button type="submit" class="btn-solve" style="color:white;background-color:#02BE6E;box-sizing: border-box;width:280px;padding:8px 2px 8px;font-size:20px">Lưu</button>
+              <div class="btn_finish" style="padding-top:20px;">
+                <button type="submit" class="btn-solve"
+                  style="color:white;background-color:#02BE6E;box-sizing: border-box;width:280px;padding:8px 2px 8px;font-size:20px">Lưu</button>
               </div>
-            
+
             </form>
-            
+
           </div>
         </div>
         <div class="tab-pane" id="information_order">
           <div class="form-group" style="font-size:25px">Thông tin đơn hàng</div>
           <hr>
-          <form>
-            <div class="form-group1">
-              <label class="d-block">Đơn hàng của tôi</label>
-              <table class="form-table" style="width:100%">
-                <thead class="form-thead">
-                  <tr>
-                    <td>Mã đơn hàng</td>
-                    <td>Ngày mua</td>
-                    <td>Sản phẩm</td>
-                    <td>Tổng tiền</td>
-                    <td>Ngày mua</td>
-                  </tr>
-                </thead>
-              </table>
+          <div class="container">
+            {% for order in orders %}
+            <div class="row g-3">
+              <div class="col-12 bg-light p-3 d-flex justify-content-between">
+                <div class="d-flex d-flex-inline">
+                  <div class="pe-3">{{ order.created }}</div>
+                  <div class="dropdown">
+                    <a class="text-reset text-decoration-none dropdown-toggle" href="#" role="link" id="dropdownLink"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Dispacted to
+                      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                        class="bi bi-chevron-down" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                          d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                      </svg>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownLink">
+                      <li class="item small">{{order.full_name}}</li>
+                      <li class="item small">{{order.address1}}</li>
+                      <li class="item small">{{order.address2}}</li>
+                      <li class="item small">{{order.post_code}}</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="text-end">
+                  Total paid: <span class="fw-bold">£{{ order.total_paid }}</span>
+                </div>
+              </div>
+              <div class="col-md-5 col-lg-4 order-md-last p-0 order-3">
+                <div class="d-grid gap-2 ">
+                  <button class="btn btn-warning" type="button">Problem with order</button>
+                  <button class="btn btn-light" type="button">Leave a review</button>
+                </div>
+              </div>
+              <div class="col-md-7 col-lg-8 p-0">
+                {% for item in order.items.all %}
+                <div class="card mb-3 border-0">
+                  <div class="row g-0">
+                    <div class="col-md-2 d-none d-md-block">
+                      {% for image in item.product.image.all %}
+                      {% if image.is_feature %}
+                      <img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="..." ">
+                      {% endif %}
+                      {% endfor %}
+                    </div>
+                    <div class=" col-md-10">
+                      <div class="card-body p-3">
+                        <a class="text-decoration-none" href="{{ item.product.get_absolute_url }}">
+                          <p class="card-text small">{{item.product.title}}</p>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
+              </div>
             </div>
-          </form>
+            {% endfor %}
+          </div>
           <hr>
         </div>
       </div>
@@ -269,35 +328,32 @@
 
 <script>
   // Change the type of input to password or text
-      function Toggle() {
-          var temp = document.getElementById("typepass");
-          if (temp.type === "password") {
-              temp.type = "text";
-          }
-          else {
-              temp.type = "password";
-          }
-      }
+  function Toggle() {
+    var temp = document.getElementById("typepass");
+    if (temp.type === "password") {
+      temp.type = "text";
+    } else {
+      temp.type = "password";
+    }
+  }
 
-      function Toggle1() {
-          var temp = document.getElementById("typepassnew");
-          if (temp.type === "password") {
-              temp.type = "text";
-          }
-          else {
-              temp.type = "password";
-          }
-      }
+  function Toggle1() {
+    var temp = document.getElementById("typepassnew");
+    if (temp.type === "password") {
+      temp.type = "text";
+    } else {
+      temp.type = "password";
+    }
+  }
 
-      function Toggle2() {
-          var temp = document.getElementById("typepassconfirmnew");
-          if (temp.type === "password") {
-              temp.type = "text";
-          }
-          else {
-              temp.type = "password";
-          }
-      }
+  function Toggle2() {
+    var temp = document.getElementById("typepassconfirmnew");
+    if (temp.type === "password") {
+      temp.type = "text";
+    } else {
+      temp.type = "password";
+    }
+  }
 </script>
 <br><br><br>
 {% endblock %}
