--- a/DiChoHo/templates/profile.html
+++ b/DiChoHo/templates/profile.html
@@ -82,7 +82,7 @@
                 <div class="form-name" style="display:flex;padding-top:30px">
                   <div class="input-label">Họ & tên</div>
                   <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:80px;box-sizing: border-box;">
-                    <p>{{user.first_name}}</p>
+                    <p>{{user.last_name}} {{user.first_name}}</p>
                   </div>
                 </div>
 
@@ -92,18 +92,66 @@
                     <p>{{user.email}}</p>
                   </div>
                 </div>
-
-                <div class="form-location" style="display:flex;padding-top:30px">
-                  <div class="input-label">Địa chỉ</div>
-                  <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:92px;box-sizing: border-box;">
-                    <p>{{user_address.adress_line}}</p>
-                  </div>
-                </div>
-
+                
                 <div class="form-phone" style="display:flex;padding-top:30px">
                   <div class="input-label">Số điện thoại</div>
                   <div class=" " style="z-index:1 ;flex : 1 1 0%; padding-left:50px;box-sizing: border-box;">
-                    <p>{{user_address.phone}}</p>
+                    <p>{{profile.phone}}</p>
+                  </div>
+                </div>
+
+                <div class="form-location" style="display:flex;padding-top:30px">
+                  <div class="input-label">Địa chỉ</div>
+                  <div class="container px-0">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                      <div class="col">
+                        <a href="{% url "add_address" %}" class="text-reset text-decoration-none" role="button"
+                          style="max-width: 540px;">
+                          <div class="card mb-3 h-100" style="border: dashed 2px #ccc;">
+                            <div class="row g-0 h-100">
+                              <div class="col-12" style="min-height:100px">
+                                <div class="card-body text-center position-absolute top-50 start-50 translate-middle">
+                                  <svg style="color:#ccc;" xmlns="http://www.w3.org/2000/svg" width="60" height="60"
+                                    fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                                    <path
+                                      d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                                  </svg>
+                                  <h1 class="h5">Add Address</h1>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      {% for address in addresses %}
+                      <div class="col">
+                        <div class="card pb-3">
+                          <div class="card-header bg-white small text-muted">
+                            {% if address.default %}
+                            Default
+                            {% endif %}
+                            &nbsp;
+                          </div>
+                          <div class="card-body small pb-1">
+                            <p class="card-text m-0 fw-bold">{{address.full_name}}</p>
+                            <p class="card-text m-0">{{address.address_line}}</p>
+                            <p class="card-text m-0">{{address.city}}</p>
+                            <p class="card-text m-0">Phone number: {{address.phone}}</p>
+                            <div class="pt-5">
+                              <a href="{% url 'edit_address' address.id %}" class="text-decoration-none">Edit</a>
+                              |
+                              <a href="{% url 'delete_address' address.id %}" class="text-decoration-none">Delete</a>
+                              {% if not address.default %}
+                              | <a href="{% url 'set_address_default' address.id %}" class="text-decoration-none">Set
+                                Default</a>
+                              {% endif %}
+                            </div>
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+                      {% endfor %}
+                    </div>
                   </div>
                 </div>
 
@@ -222,7 +270,8 @@
               style="padding:16px;border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px;display:block;width: 80%;float:left;">
               {% csrf_token %}
               {{ form }}
-              {% comment %} <div class="form-password-current" style="font-size:20px;padding-top:10px;">Mật khẩu hiện tại</div>
+              {% comment %} <div class="form-password-current" style="font-size:20px;padding-top:10px;">Mật khẩu hiện
+                tại</div>
               <div class="input-password-current"
                 style="border:1px solid rgb(235,235,240);box-sizing:border-box;border-radius:4px">
                 <input name="oldPassword" type="password" maxlength="50" placeholder="Nhập mật khẩu hiện tại" value=""
@@ -266,45 +315,28 @@
               <div class="col-12 bg-light p-3 d-flex justify-content-between">
                 <div class="d-flex d-flex-inline">
                   <div class="pe-3">{{ order.created }}</div>
-                  <div class="dropdown">
-                    <a class="text-reset text-decoration-none dropdown-toggle" href="#" role="link" id="dropdownLink"
-                      data-bs-toggle="dropdown" aria-expanded="false">
-                      Dispacted to
-                      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
-                        class="bi bi-chevron-down" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                          d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                      </svg>
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownLink">
-                      <li class="item small">{{order.full_name}}</li>
-                      <li class="item small">{{order.address1}}</li>
-                      <li class="item small">{{order.address2}}</li>
-                      <li class="item small">{{order.post_code}}</li>
-                    </ul>
-                  </div>
                 </div>
                 <div class="text-end">
-                  Total paid: <span class="fw-bold">£{{ order.total_paid }}</span>
+                  Tổng tiền đã trả: <span class="fw-bold">{{ order.total_paid }} VNĐ</span>
                 </div>
               </div>
               <div class="col-md-5 col-lg-4 order-md-last p-0 order-3">
                 <div class="d-grid gap-2 ">
-                  <button class="btn btn-warning" type="button">Problem with order</button>
-                  <button class="btn btn-light" type="button">Leave a review</button>
+                  {% comment %} <button class="btn btn-warning" type="button">Hủy đơn</button> {% endcomment %}
+                  <button class="btn btn-light" type="button">Để lại đánh giá</button>
                 </div>
               </div>
               <div class="col-md-7 col-lg-8 p-0">
                 {% for item in order.items.all %}
                 <div class="card mb-3 border-0">
                   <div class="row g-0">
-                    <div class="col-md-2 d-none d-md-block">
+                    {% comment %} <div class="col-md-2 d-none d-md-block">
                       {% for image in item.product.image.all %}
                       {% if image.is_feature %}
                       <img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="..." ">
                       {% endif %}
                       {% endfor %}
-                    </div>
+                    </div> {% endcomment %}
                     <div class=" col-md-10">
                       <div class="card-body p-3">
                         <a class="text-decoration-none" href="{{ item.product.get_absolute_url }}">
