--- a/DiChoHo/templates/wishlist.html
+++ b/DiChoHo/templates/wishlist.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="col-md-12 ftco-animate">
 				<div class="cart-list">
-					<table class="table">
+					<table class="table" id="jqueryCatchClick">
 						<thead class="thead-primary">
 							<tr class="text-center">
 								<th>&nbsp;</th>
@@ -34,11 +34,10 @@
 							</tr>
 						</thead>
 						<tbody>
-							{% if cart|length > 0 %}
-								{% for item in cart %}
-								{% with product=item.product %}			
+							{% if products|length > 0 %}
+								{% for product in products %}
 							<tr class="text-center">
-								<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
+								<td class="product-remove"><a href="#" id="delete-button{{product.id}}"><span class="ion-ios-close" id="delete-span{{product.id}}"></span></a></td>
 								<td class="image-prod">
 									<div class="img" style="margin-top: 30px;">
 										<img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="san-pham" />
@@ -53,13 +52,12 @@
 								<td class="quantity">
 									<div class="input-group mb-3" style="margin-top:25px;">
 										<input type="text" name="quantity" class="quantity form-control input-number"
-											value="1" min="1" max="100">
+											value="1" disabled>
 									</div>
 								</td>
 
 								<td class="total">{{product.price}}đ</td>
 							</tr>
-								{% endwith %}
 								{% endfor %}		
 							{% endif %}
 						</tbody>
@@ -71,40 +69,29 @@
 </section>
 
 <script>
-	$(document).ready(function () {
-
-		var quantitiy = 0;
-		$('.quantity-right-plus').click(function (e) {
-
-			// Stop acting like a button
-			e.preventDefault();
-			// Get the field name
-			var quantity = parseInt($('#quantity').val());
-
-			// If is not undefined
-
-			$('#quantity').val(quantity + 1);
-
-
-			// Increment
-
-		});
-
-		$('.quantity-left-minus').click(function (e) {
-			// Stop acting like a button
-			e.preventDefault();
-			// Get the field name
-			var quantity = parseInt($('#quantity').val());
-
-			// If is not undefined
-
-			// Increment
-			if (quantity > 0) {
-				$('#quantity').val(quantity - 1);
-			}
-		});
-
-	});
+$(document).ready(function(){
+    $("#jqueryCatchClick").on("click", function (e) {
+      e.preventDefault();
+      var clickElementId = e.target.id;
+      if (clickElementId.includes("delete-")) {
+        var prodid = clickElementId.replace("delete-button","");
+        prodid = prodid.replace("delete-span","");
+        $.ajax({
+        type: "POST",
+        url: '{% url "wishlist_delete" %}',
+        data: {
+          productid: prodid,
+          csrfmiddlewaretoken: "{{csrf_token}}",
+          action: "post",
+        },
+        success: function (json) {
+        $("#delete-button"+prodid).parent().parent().remove();
+    	},
+    	error: function (xhr, errmsg, err) {},
+      });
+      }
+    });
+});
 </script>
 
 {% endblock %}
