--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -112,8 +112,8 @@
 									<span><i class="ion-ios-cart jqueryCatch"
 											id="productAdd2{{relative_product.id}}"></i></span>
 								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center ">
-									<span><i class="ion-ios-heart"></i></span>
+								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch" id="wishlist1{{relative_product.id}}">
+									<span><i class="ion-ios-heart jqueryCatch" id="wishlist2{{relative_product.id}}"></i></span>
 								</a>
 							</div>
 						</div>
@@ -174,6 +174,23 @@
 					error: function (xhr, errmsg, err) {}
 				});
 			}
+			else if (clickElementId.includes("wishlist")) {
+				var prodid = clickElementId.replace("wishlist1","");
+				prodid = prodid.replace("wishlist2","");
+				$.ajax({
+				type: 'POST',
+				url: '{% url "wishlist_add" %}',
+				data: {
+				productid: prodid,
+				csrfmiddlewaretoken: "{{csrf_token}}",
+				action: 'post'
+				},
+				success: function (json) {
+				console.log("Add to wishlist successfully");
+				},
+				error: function (xhr, errmsg, err) {}
+        });
+			} 
 			else {
 				var prodid = parseInt(clickElementId.replace("current_product",""));
 				var product_qty = parseInt(document.getElementById("quantity").value);
