--- a/DiChoHo/templates/shop.html
+++ b/DiChoHo/templates/shop.html
@@ -96,10 +96,10 @@
                     jqueryCatch
                   "
                   id="productAdd1{{product.id}}">
-                  <span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}" data-value="{{product.id}}"></i></span>
+                  <span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}"></i></span>
                 </a>
-                <a href="#" class="heart d-flex justify-content-center align-items-center">
-                  <span><i class="ion-ios-heart"></i></span>
+                <a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch" id="wishlist1{{product.id}}">
+                  <span><i class="ion-ios-heart jqueryCatch" id="wishlist2{{product.id}}"></i></span>
                 </a>
               </div>
             </div>
@@ -163,6 +163,25 @@
           },
           success: function (json) {
             console.log("Add successfully");
+            // document.getElementById("cart-qty").innerHTML = json.qty
+          },
+          error: function (xhr, errmsg, err) {}
+        });
+        }
+        else 
+        {
+          var prodid = clickElementId.replace("wishlist1","");
+          prodid = prodid.replace("wishlist2","");
+          $.ajax({
+          type: 'POST',
+          url: '{% url "wishlist_add" %}',
+          data: {
+            productid: prodid,
+            csrfmiddlewaretoken: "{{csrf_token}}",
+            action: 'post'
+          },
+          success: function (json) {
+            console.log("Add to wishlist successfully");
             // document.getElementById("cart-qty").innerHTML = json.qty
           },
           error: function (xhr, errmsg, err) {}
