--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -188,13 +188,17 @@
 		{% for item in order_items|slice:":12" %}
 		{% with product=item.product %} 
 			<div class="col-md-4 col-lg-2 ftco-animate">
-				<div class="product bg-white" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
+				<div class="product bg-white" style="max-width: 100%;height:270px;">
 					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
 							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
 					</a>
-					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
+					<div class="text py-3 pb-4 px-3 text-center" style="">
+						<h3 style="overflow: hidden;
+						text-overflow: ellipsis;
+						display: -webkit-box;
+						-webkit-line-clamp: 2;
+						-webkit-box-orient: vertical;"><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								<p class="price"><span>{{ product.price }}đ</span></p>
@@ -244,7 +248,11 @@
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="{{ product2.get_absolute_url }}">{{ product2.title }}</a></h3>
+						<h3 style="overflow: hidden;
+						text-overflow: ellipsis;
+						display: -webkit-box;
+						-webkit-line-clamp: 2;
+						-webkit-box-orient: vertical;"> <a href="{{ product2.get_absolute_url }}">{{ product2.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								<p class="price"><span>{{ product2.price }}đ</span></p>
@@ -287,7 +295,8 @@
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="{{ product3.get_absolute_url }}">{{ product3.title }}</a></h3>
+						<h3 style="overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical"> 
+						<a href="{{ product3.get_absolute_url }}">{{ product3.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								<p class="price"><span>{{ product3.price }}đ</span></p>
