--- a/DiChoHo/templates/category.html
+++ b/DiChoHo/templates/category.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 
-  <div class="row">
+<div class="row">
   <div class="col-lg-12 card-margin">
     <div class="card search-form">
       <div class="card-body p-0">
@@ -14,28 +14,13 @@
             <div class="col-12">
               <div class="row no-gutters">
                 <div class="col-lg-11 col-md-6 col-sm-12 p-0">
-                  <input
-                    type="text"
-                    placeholder="Tìm kiếm"
-                    class="form-control"
-                    id="search"
-                    name="search"
-                  />
+                  <input type="text" placeholder="Tìm kiếm" class="form-control" id="search" name="search" />
                 </div>
                 <div class="col-lg-1 col-md-3 col-sm-12 p-0">
                   <button type="submit" class="btn btn-base">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-search"
-                    >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="feather feather-search">
                       <circle cx="11" cy="11" r="8"></circle>
                       <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                     </svg>
@@ -50,20 +35,15 @@
   </div>
 </div>
 
-<div
-  class="hero-wrap hero-bread"
-  style="background-image: url(/static/images/bg_1.jpg)"
->
+<div class="hero-wrap hero-bread" style="background-image: url(/static/images/bg_1.jpg)">
   <div class="container">
-    <div
-      class="
+    <div class="
         row
         no-gutters
         slider-text
         align-items-center
         justify-content-center
-      "
-    >
+      ">
       <div class="col-md-9 ftco-animate text-center">
         <h1 class="mb-0 bread">Sản phẩm</h1>
       </div>
@@ -85,46 +65,44 @@
         </ul>
       </div>
     </div>
-    <div class="row" id="reload_data">
+    <div class="row">
+
       {% for product in products %}
       <div class="col-md-2 col-lg- ftco-animate">
-        <div class="product" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
-          <a href="{{ product.get_absolute_url }}" class="img-prod"
-            ><img
-              class="img-fluid"
-              src="{{ product.image.url | slice:"10:" }}"
-              alt="Colorlib Template"
-            />
+        <div class="product bg-white" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
+          <a href="{{ product.get_absolute_url }}" class="img-prod">
+            <img class="img-fluid" src="{{ product.image.url | slice:"10:" }}" alt="product" />
             <div class="overlay"></div>
           </a>
+
           <div class="text py-3 pb-4 px-3 text-center">
-            <h3><a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
+            <h3 style="overflow: hidden;
+						text-overflow: ellipsis;
+						display: -webkit-box;
+						-webkit-line-clamp: 2;
+						-webkit-box-orient: vertical;">
+              <a href="{{ product.get_absolute_url }}">{{ product.title }}</a></h3>
             <div class="d-flex">
               <div class="pricing">
                 <p class="price">
-                  <span>{{ product.price }}</span>
+                  <span>{{ product.price }}đ</span>
                 </p>
               </div>
             </div>
             <div class="bottom-area d-flex px-3">
               <div class="m-auto d-flex">
-                <a
-                  href="#"
-                  class="
+                <a href="#" class="
                     buy-now
                     d-flex
                     justify-content-center
                     align-items-center
                     mx-1
                     jqueryCatch
-                  "
-                id="productAdd1{{product.id}}">
+                  " id="productAdd1{{product.id}}">
                   <span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}"></i></span>
                 </a>
-                <a
-                  href="#"
-                  class="heart d-flex justify-content-center align-items-center jqueryCatch" id="wishlist1{{product.id}}"
-                >
+                <a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch"
+                  id="wishlist1{{product.id}}">
                   <span><i class="ion-ios-heart jqueryCatch" id="wishlist2{{product.id}}"></i></span>
                 </a>
               </div>
@@ -158,45 +136,40 @@
   </div>
 </section>
 
-  
+
 {% endblock %}
 {% block arrow %}
 <div class="row">
-	<div class="mouse">
-		<a href="#" class="mouse-icon">
-			<div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
-		</a>
-	</div>
+  <div class="mouse">
+    <a href="#" class="mouse-icon">
+      <div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
+    </a>
+  </div>
 </div>
 
 <script>
-	var urlArray = window.location.href.split("/");
-	if (urlArray[urlArray.length-2]=="rau-cu") {
-		document.getElementById("raucu").classList.add('active');
-	}
-	else if (urlArray[urlArray.length-2]=="trai-cay"){
-		document.getElementById("traicay").classList.add('active');
-	}
-	else if (urlArray[urlArray.length-2]=="thit"){
-		document.getElementById("thit").classList.add('active');
-	}
-  else if (urlArray[urlArray.length-2]=="do-uong"){
-		document.getElementById("douong").classList.add('active');
-	}
-	else {
-		document.getElementById("ca").classList.add('active');
-	}
+  var urlArray = window.location.href.split("/");
+  if (urlArray[urlArray.length - 2] == "rau-cu") {
+    document.getElementById("raucu").classList.add('active');
+  } else if (urlArray[urlArray.length - 2] == "trai-cay") {
+    document.getElementById("traicay").classList.add('active');
+  } else if (urlArray[urlArray.length - 2] == "thit") {
+    document.getElementById("thit").classList.add('active');
+  } else if (urlArray[urlArray.length - 2] == "do-uong") {
+    document.getElementById("douong").classList.add('active');
+  } else {
+    document.getElementById("ca").classList.add('active');
+  }
 
-$(document).ready(function(){
-        $(".jqueryCatch").on('click', function (e) {
-        if(e.target !== e.currentTarget) return;
-        e.preventDefault();
-        var clickElementId = e.target.id;
-        if (clickElementId.includes("productAdd"))
-        {
-          var prodid = clickElementId.replace("productAdd1","");
-          prodid = prodid.replace("productAdd2","");
-          $.ajax({
+  $(document).ready(function () {
+    $(".jqueryCatch").on('click', function (e) {
+      if (e.target !== e.currentTarget) return;
+      e.preventDefault();
+      var clickElementId = e.target.id;
+      if (clickElementId.includes("productAdd")) {
+        var prodid = clickElementId.replace("productAdd1", "");
+        prodid = prodid.replace("productAdd2", "");
+        $.ajax({
           type: 'POST',
           url: '{% url "cart_add" %}',
           data: {
@@ -210,12 +183,10 @@ $(document).ready(function(){
           },
           error: function (xhr, errmsg, err) {}
         });
-        }
-        else 
-        {
-          var prodid = clickElementId.replace("wishlist1","");
-          prodid = prodid.replace("wishlist2","");
-          $.ajax({
+      } else {
+        var prodid = clickElementId.replace("wishlist1", "");
+        prodid = prodid.replace("wishlist2", "");
+        $.ajax({
           type: 'POST',
           url: '{% url "wishlist_add" %}',
           data: {
@@ -228,9 +199,9 @@ $(document).ready(function(){
           },
           error: function (xhr, errmsg, err) {}
         });
-        }
-      })
-    });
+      }
+    })
+  });
 </script>
 
 {% endblock %}
