--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -185,7 +185,7 @@
 
 	<div class="container">
 		<div class="row">
-		{% for product in products|slice:":12" %}
+			{% for product in products|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
 				<div class="product bg-white" style="max-width: 100%;height:270px;">
 					<a href="{{ product.get_absolute_url }}" class="img-prod"><img class="img-fluid"
@@ -205,10 +205,14 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch" id="productAdd1{{product.id}}">
-									<span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}" data-value="{{product.id}}"></i></span>
+								<a href="#"
+									class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch"
+									id="productAdd1{{product.id}}">
+									<span><i class="ion-ios-cart jqueryCatch" id="productAdd2{{product.id}}"
+											data-value="{{product.id}}"></i></span>
 								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch" id="wishlist1{{product.id}}">
+								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch"
+									id="wishlist1{{product.id}}">
 									<span><i class="ion-ios-heart jqueryCatch" id="wishlist2{{product.id}}"></i></span>
 								</a>
 							</div>
@@ -216,7 +220,7 @@
 					</div>
 				</div>
 			</div>
-		{% endfor %}
+			{% endfor %}
 		</div>
 	</div>
 </section>
@@ -239,7 +243,8 @@
 		<div class="row">
 			{% for product2 in products2|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
-				<div class="product bg-white" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
+				<div class="product bg-white"
+					style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
 					<a href="{{ product2.get_absolute_url }}" class="img-prod"><img class="img-fluid"
 							src="{{ product2.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
@@ -249,7 +254,8 @@
 						text-overflow: ellipsis;
 						display: -webkit-box;
 						-webkit-line-clamp: 2;
-						-webkit-box-orient: vertical;"> <a href="{{ product2.get_absolute_url }}">{{ product2.title }}</a></h3>
+						-webkit-box-orient: vertical;">
+							<a href="{{ product2.get_absolute_url }}">{{ product2.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								<p class="price"><span>{{ product2.price }}đ</span></p>
@@ -257,10 +263,14 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch" id="productAdd3{{product2.id}}">
-									<span><i class="ion-ios-cart jqueryCatch" id="productAdd4{{product2.id}}"></i></span>
+								<a href="#"
+									class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch"
+									id="productAdd3{{product2.id}}">
+									<span><i class="ion-ios-cart jqueryCatch"
+											id="productAdd4{{product2.id}}"></i></span>
 								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch" id="wishlist3{{product2.id}}">
+								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch"
+									id="wishlist3{{product2.id}}">
 									<span><i class="ion-ios-heart jqueryCatch" id="wishlist4{{product2.id}}"></i></span>
 								</a>
 							</div>
@@ -286,14 +296,19 @@
 		<div class="row">
 			{% for product3 in products3|slice:":12" %}
 			<div class="col-md-4 col-lg-2 ftco-animate">
-				<div class="product bg-white" style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
+				<div class="product bg-white"
+					style="text-overflow: ellipsis;max-width: 100%;overflow: hidden;height: 270px;">
 					<a href="{{ product3.get_absolute_url }}" class="img-prod"><img class="img-fluid"
 							src="{{ product3.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
-						<h3 style="overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical"> 
-						<a href="{{ product3.get_absolute_url }}">{{ product3.title }}</a></h3>
+						<h3 style="overflow: hidden;
+						text-overflow: ellipsis;
+						display: -webkit-box;
+						-webkit-line-clamp: 2;
+						-webkit-box-orient: vertical;">
+							<a href="{{ product3.get_absolute_url }}">{{ product3.title }}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								<p class="price"><span>{{ product3.price }}đ</span></p>
@@ -301,10 +316,14 @@
 						</div>
 						<div class="bottom-area d-flex px-3">
 							<div class="m-auto d-flex">
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch" id="productAdd5{{product3.id}}">
-									<span><i class="ion-ios-cart jqueryCatch" id="productAdd6{{product3.id}}"></i></span>
+								<a href="#"
+									class="buy-now d-flex justify-content-center align-items-center mx-1 jqueryCatch"
+									id="productAdd5{{product3.id}}">
+									<span><i class="ion-ios-cart jqueryCatch"
+											id="productAdd6{{product3.id}}"></i></span>
 								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch" id="wishlist5{{product3.id}}">
+								<a href="#" class="heart d-flex justify-content-center align-items-center jqueryCatch"
+									id="wishlist5{{product3.id}}">
 									<span><i class="ion-ios-heart jqueryCatch" id="wishlist6{{product3.id}}"></i></span>
 								</a>
 							</div>
@@ -355,57 +374,54 @@
 </div>
 
 <script>
-	$(document).ready(function(){
-        $(".jqueryCatch").on('click', function (e) {
-        if(e.target !== e.currentTarget) return;
-        e.preventDefault();
-        var clickElementId = e.target.id;
-        if (clickElementId.includes("productAdd"))
-        {
-          var prodid = clickElementId.replace("productAdd1","");
-          prodid = prodid.replace("productAdd2","");
-		  prodid = prodid.replace("productAdd3","");
-		  prodid = prodid.replace("productAdd4","");
-		  prodid = prodid.replace("productAdd5","");
-		  prodid = prodid.replace("productAdd6","");
-          $.ajax({
-          type: 'POST',
-          url: '{% url "cart_add" %}',
-          data: {
-            productid: prodid,
-            productqty: 1,
-            csrfmiddlewaretoken: "{{csrf_token}}",
-            action: 'post'
-          },
-          success: function (json) {
-            console.log("Add successfully");
-          },
-          error: function (xhr, errmsg, err) {}
-        });
-        }
-		else 
-        {
-          var prodid = clickElementId.replace("wishlist1","");
-          prodid = prodid.replace("wishlist2","");
-		  prodid = prodid.replace("wishlist3","");
-		  prodid = prodid.replace("wishlist4","");
-		  prodid = prodid.replace("wishlist5","");
-		  prodid = prodid.replace("wishlist6","");
-          $.ajax({
-          type: 'POST',
-          url: '{% url "wishlist_add" %}',
-          data: {
-            productid: prodid,
-            csrfmiddlewaretoken: "{{csrf_token}}",
-            action: 'post'
-          },
-          success: function (json) {
-            console.log("Add to wishlist successfully");
-          },
-          error: function (xhr, errmsg, err) {}
-        });
-        }
-      })
-    });
+	$(document).ready(function () {
+		$(".jqueryCatch").on('click', function (e) {
+			if (e.target !== e.currentTarget) return;
+			e.preventDefault();
+			var clickElementId = e.target.id;
+			if (clickElementId.includes("productAdd")) {
+				var prodid = clickElementId.replace("productAdd1", "");
+				prodid = prodid.replace("productAdd2", "");
+				prodid = prodid.replace("productAdd3", "");
+				prodid = prodid.replace("productAdd4", "");
+				prodid = prodid.replace("productAdd5", "");
+				prodid = prodid.replace("productAdd6", "");
+				$.ajax({
+					type: 'POST',
+					url: '{% url "cart_add" %}',
+					data: {
+						productid: prodid,
+						productqty: 1,
+						csrfmiddlewaretoken: "{{csrf_token}}",
+						action: 'post'
+					},
+					success: function (json) {
+						console.log("Add successfully");
+					},
+					error: function (xhr, errmsg, err) {}
+				});
+			} else {
+				var prodid = clickElementId.replace("wishlist1", "");
+				prodid = prodid.replace("wishlist2", "");
+				prodid = prodid.replace("wishlist3", "");
+				prodid = prodid.replace("wishlist4", "");
+				prodid = prodid.replace("wishlist5", "");
+				prodid = prodid.replace("wishlist6", "");
+				$.ajax({
+					type: 'POST',
+					url: '{% url "wishlist_add" %}',
+					data: {
+						productid: prodid,
+						csrfmiddlewaretoken: "{{csrf_token}}",
+						action: 'post'
+					},
+					success: function (json) {
+						console.log("Add to wishlist successfully");
+					},
+					error: function (xhr, errmsg, err) {}
+				});
+			}
+		})
+	});
 </script>
 {% endblock %}
