--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -193,7 +193,7 @@
 							src="{{ product.image.url | slice:"10:" }}" alt="Product">
 						<div class="overlay"></div>
 					</a>
-					<div class="text py-3 pb-4 px-3 text-center" style="">
+					<div class="text py-3 pb-4 px-3 text-center">
 						<h3 style="overflow: hidden;
 						text-overflow: ellipsis;
 						display: -webkit-box;
