--- a/DiChoHo/templates/index.html
+++ b/DiChoHo/templates/index.html
@@ -363,6 +363,10 @@
 	</div>
 </section>
 
+<div class="alert alert-success" role="alert" style="position: fixed; bottom: 0px; left: 25px; display: none;" id="success-alert">
+  Thêm sản phẩm thành công
+</div>
+
 {% endblock %}
 {% block arrow %}
 <div class="row">
@@ -396,7 +400,10 @@
 						action: 'post'
 					},
 					success: function (json) {
-						console.log("Add successfully");
+						$("#success-alert").show();
+						$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
+						$("#success-alert").slideUp(500);
+					});
 					},
 					error: function (xhr, errmsg, err) {}
 				});
@@ -416,7 +423,10 @@
 						action: 'post'
 					},
 					success: function (json) {
-						console.log("Add to wishlist successfully");
+						$("#success-alert").show();
+						$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
+						$("#success-alert").slideUp(500);
+					});
 					},
 					error: function (xhr, errmsg, err) {}
 				});
