--- a/DiChoHo/templates/product-single.html
+++ b/DiChoHo/templates/product-single.html
@@ -139,6 +139,11 @@
 	{% endif %}
 </section>
 
+<div class="alert alert-success" role="alert" style="position: fixed; bottom: 0px; left: 25px; display: none;" id="success-alert">
+  Thêm sản phẩm thành công
+</div>
+
+
 {% endblock %}
 {% block arrow %}
 <div class="row">
@@ -168,8 +173,10 @@
 						action: 'post'
 					},
 					success: function (json) {
-						alert("Thêm vào giỏ thành công!");
-						// document.getElementById("cart-qty").innerHTML = json.qty
+						$("#success-alert").show();
+						$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
+						$("#success-alert").slideUp(500);
+					});
 					},
 					error: function (xhr, errmsg, err) {}
 				});
@@ -186,7 +193,10 @@
 				action: 'post'
 				},
 				success: function (json) {
-				console.log("Add to wishlist successfully");
+					$("#success-alert").show();
+					$("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
+					$("#success-alert").slideUp(500);
+				});
 				},
 				error: function (xhr, errmsg, err) {}
         });
